# pi-py

./: .gitignore  README.md  agent.md  notes.txt  pyproject.toml
.pi_py/sessions/: 20260213T103801Z.jsonl
scripts/: generate_models.py
src/pi_py/: __init__.py  adapters.py  agent.py  ai_types.py  api_registry.py  cli.py  config.py  core.py  env_api_keys.py  events.py  llm.py  model_registry.py  models.py  models_generated.py  prompts.py  session.py  stream.py  tools.py
src/pi_py/providers/: __init__.py  openai_chat.py  register_builtins.py  shared.py  stub_local.py
src/pi_py/tools/: __init__.py  bash.py  path_utils.py  read.py  router.py  time.py  write.py
tests/: test_adapters.py  test_agent.py  test_core_tools.py
